--- a/src/Views/WorkingCopy.axaml
+++ b/src/Views/WorkingCopy.axaml
@@ -230,33 +230,13 @@
                     Background="Transparent"/>
 
       <!-- Commit Message -->
-      <v:CommitMessageTextBox Grid.Row="2" Text="{Binding CommitMessage, Mode=TwoWay}"/>
+      <v:CommitMessageTextBox Grid.Row="2" ShowAdvancedOptions="True" Text="{Binding CommitMessage, Mode=TwoWay}"/>
 
       <!-- Commit Options -->
-      <Grid Grid.Row="3" Margin="0,6,0,0" ColumnDefinitions="Auto,Auto,Auto,Auto,*,Auto,Auto,Auto">
-        <Button Grid.Column="0"
-                Classes="icon_button"
-                Margin="4,0,0,0" Padding="0"
-                Click="OnOpenCommitMessagePicker"
-                ToolTip.Tip="{DynamicResource Text.WorkingCopy.CommitMessageHelper}"
-                ToolTip.Placement="Top"
-                ToolTip.VerticalOffset="0">
-          <Path Width="12" Height="12" Data="{StaticResource Icons.Menu}"/>
-        </Button>
-
-        <Button Grid.Column="1"
-                Classes="icon_button"
-                Margin="4,2,0,0"
-                Click="OnOpenOpenAIHelper"
-                ToolTip.Tip="{DynamicResource Text.AIAssistant.Tip}"
-                ToolTip.Placement="Top"
-                ToolTip.VerticalOffset="0">
-          <Path Width="15" Height="15" Data="{StaticResource Icons.AIAssist}"/>
-        </Button>
-
-        <CheckBox Grid.Column="2"
+      <Grid Grid.Row="3" Margin="0,6,0,0" ColumnDefinitions="Auto,Auto,*,Auto,Auto,Auto">
+        <CheckBox Grid.Column="0"
                   Height="24"
-                  Margin="8,0,0,0"
+                  Margin="1,0,0,0"
                   HorizontalAlignment="Left"
                   IsChecked="{Binding EnableSignOff, Mode=TwoWay}"
                   Content="{DynamicResource Text.WorkingCopy.SignOff}"
@@ -264,7 +244,7 @@
                   ToolTip.Placement="Top"
                   ToolTip.VerticalOffset="0"/>
 
-        <CheckBox Grid.Column="3"
+        <CheckBox Grid.Column="1"
                   Height="24"
                   Margin="12,0,0,0"
                   HorizontalAlignment="Left"
@@ -274,12 +254,12 @@
                   ToolTip.Placement="Top"
                   ToolTip.VerticalOffset="0"/>
 
-        <v:LoadingIcon Grid.Column="4"
+        <v:LoadingIcon Grid.Column="2"
                        Width="18" Height="18"
                        HorizontalAlignment="Right"
                        IsVisible="{Binding IsCommitting}"/>
 
-        <SplitButton Grid.Column="5"
+        <SplitButton Grid.Column="3"
                      Content="{DynamicResource Text.Repository.Continue}"
                      Height="28"
                      Margin="8,0,0,0"
@@ -301,7 +281,7 @@
           </SplitButton.Flyout>
         </SplitButton>
 
-        <Button Grid.Column="5"
+        <Button Grid.Column="3"
                 Classes="flat primary"
                 Content="{DynamicResource Text.WorkingCopy.Commit}"
                 Height="28"
@@ -334,7 +314,7 @@
         </Button>
 
         <!-- Invisible button just to add another hotkey `Ctrl+Shift+Enter` to commit with auto-stage -->
-        <Button Grid.Column="6"
+        <Button Grid.Column="4"
                 Width="0" Height="0"
                 Background="Transparent"
                 Command="{Binding CommitWithAutoStage}"
@@ -347,7 +327,7 @@
           </Button.IsEnabled>
         </Button>
 
-        <Button Grid.Column="7"
+        <Button Grid.Column="5"
                 Classes="flat"
                 Content="{DynamicResource Text.WorkingCopy.CommitAndPush}"
                 Height="28"
