enhance: add context menu for selected log
Signed-off-by: leo <longshuang@msn.cn>

--- a/src/Resources/Locales/zh_CN.axaml
+++ b/src/Resources/Locales/zh_CN.axaml
@@ -704,6 +704,8 @@
   <x:String x:Key="Text.URL" xml:space="preserve">仓库地址 ：</x:String>
   <x:String x:Key="Text.ViewLogs" xml:space="preserve">日志列表</x:String>
   <x:String x:Key="Text.ViewLogs.Clear" xml:space="preserve">清空日志</x:String>
+  <x:String x:Key="Text.ViewLogs.CopyLog" xml:space="preserve">复制</x:String>
+  <x:String x:Key="Text.ViewLogs.Delete" xml:space="preserve">删除</x:String>
   <x:String x:Key="Text.Warn" xml:space="preserve">警告</x:String>
   <x:String x:Key="Text.Welcome" xml:space="preserve">起始页</x:String>
   <x:String x:Key="Text.Welcome.AddRootFolder" xml:space="preserve">新建分组</x:String>
