--- a/src/Views/ViewLogs.axaml
+++ b/src/Views/ViewLogs.axaml
@@ -67,24 +67,23 @@
 
         <ListBox.ItemTemplate>
           <DataTemplate DataType="vm:CommandLog">
-            <Grid>
+            <Grid Background="Transparent" ContextRequested="OnLogContextRequested">
               <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="Auto" SharedSizeGroup="SearchCommitTimeColumn"/>
-                <ColumnDefinition Width="28"/>
               </Grid.ColumnDefinitions>
-              <TextBlock Grid.Column="0"
+              <v:LoadingIcon Grid.Column="0"
+                             Width="14" Height="14"
+                             Margin="4,0,0,0"
+                             IsVisible="{Binding !IsComplete}"/>
+              
+              <TextBlock Grid.Column="1"
                          Classes="primary"
-                         Text="{Binding Name}"
                          Margin="4,0,0,0"
+                         Text="{Binding Name}"
                          VerticalAlignment="Center"
                          TextTrimming="CharacterEllipsis"/>
-              
-              <v:LoadingIcon Grid.Column="1"
-                             Width="14" Height="14"
-                             Margin="2,0,0,0"
-                             IsVisible="{Binding !IsComplete}"/>
               
               <TextBlock Grid.Column="2"
                          Classes="primary"
@@ -92,10 +91,6 @@
                          Foreground="{DynamicResource Brush.FG2}"
                          Text="{Binding TimeStr}"
                          HorizontalAlignment="Right" VerticalAlignment="Center"/>
-
-              <Button Grid.Column="3" Classes="icon_button" Click="OnRemoveLog">
-                <Path Width="14" Height="14" Data="{StaticResource Icons.Clear}"/>
-              </Button>
             </Grid>
           </DataTemplate>
         </ListBox.ItemTemplate>
