refactor: notification popup uses the same text presenter with git command log viewer (#1149)
Signed-off-by: leo <longshuang@msn.cn>

--- a/src/Views/ViewLogs.axaml
+++ b/src/Views/ViewLogs.axaml
@@ -100,8 +100,8 @@
               BorderBrush="{DynamicResource Brush.Border2}"
               BorderThickness="1"
               Background="{DynamicResource Brush.Contents}">
-        <v:LogContentPresenter Log="{Binding SelectedLog}"
-                               FontFamily="{DynamicResource Fonts.Monospace}"/>
+        <v:CommandLogContentPresenter Log="{Binding SelectedLog}"
+                                      FontFamily="{DynamicResource Fonts.Monospace}"/>
       </Border>
     </Grid>
 
