--- a/src/Views/LauncherPage.axaml
+++ b/src/Views/LauncherPage.axaml
@@ -141,9 +141,11 @@
                         </Button>
                       </Grid>
 
-                      <ScrollViewer Grid.Row="1" Margin="8" MaxHeight="200" HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">
-                        <TextBlock Margin="4,2" TextWrapping="Wrap" Text="{Binding Message}"/>
-                      </ScrollViewer>
+                      <v:CommandLogContentPresenter Grid.Row="1"
+                                                    Margin="8"
+                                                    Padding="2"
+                                                    MaxHeight="200"
+                                                    PureText="{Binding Message}"/>
                     </Grid>
                   </Border>
                 </Border>
