ux: remove tips in commit list
Signed-off-by: leo <longshuang@msn.cn>

--- a/src/Views/Histories.axaml
+++ b/src/Views/Histories.axaml
@@ -126,11 +126,7 @@
                   </Grid.ColumnDefinitions>
 
                   <!-- Subject & REFS -->
-                  <Border Grid.Column="0"
-                          Padding="{Binding Margin}"
-                          ClipToBounds="True"
-                          Background="Transparent"
-                          ToolTip.Tip="{Binding Subject}">
+                  <Border Grid.Column="0" Padding="{Binding Margin}" ClipToBounds="True" Background="Transparent">
                     <Grid ColumnDefinitions="Auto,Auto,Auto,*" Margin="2,0,4,0" ClipToBounds="True">
                       <v:CommitStatusIndicator Grid.Column="0"
                                                CurrentBranch="{Binding $parent[v:Histories].CurrentBranch}"
@@ -172,10 +168,7 @@
                   </Border>
 
                   <!-- Author -->
-                  <Grid Grid.Column="1"
-                        ColumnDefinitions="20,*"
-                        Background="Transparent"
-                        ToolTip.Tip="{Binding Author}">
+                  <Grid Grid.Column="1" ColumnDefinitions="20,*" Background="Transparent">
                     <v:Avatar Grid.Column="0"
                               Width="16" Height="16"
                               Margin="4,0,0,0"
