--- a/src/Views/ViewLogs.axaml
+++ b/src/Views/ViewLogs.axaml
@@ -77,7 +77,7 @@
               <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="Auto" SharedSizeGroup="SearchCommitTimeColumn"/>
+                <ColumnDefinition Width="Auto" SharedSizeGroup="TimeColumn"/>
               </Grid.ColumnDefinitions>
               <v:LoadingIcon Grid.Column="0"
                              Width="14" Height="14"
@@ -91,12 +91,12 @@
                          VerticalAlignment="Center"
                          TextTrimming="CharacterEllipsis"/>
               
-              <TextBlock Grid.Column="2"
-                         Classes="primary"
-                         Margin="4,0"
-                         Foreground="{DynamicResource Brush.FG2}"
-                         Text="{Binding StartTime, StringFormat='{}{0:T}'}"
-                         HorizontalAlignment="Right" VerticalAlignment="Center"/>
+              <v:CommandLogTime Grid.Column="2"
+                                Classes="primary"
+                                Margin="4,0"
+                                Foreground="{DynamicResource Brush.FG2}"
+                                Log="{Binding}"
+                                HorizontalAlignment="Right" VerticalAlignment="Center"/>
             </Grid>
           </DataTemplate>
         </ListBox.ItemTemplate>
