feature: supports search commits by change content (#1263)
Signed-off-by: leo <longshuang@msn.cn>

--- a/src/Views/Repository.axaml
+++ b/src/Views/Repository.axaml
@@ -495,6 +495,7 @@
               <TextBlock Text="{DynamicResource Text.Repository.Search.ByCommitter}"/>
               <TextBlock Text="{DynamicResource Text.Repository.Search.ByMessage}"/>
               <TextBlock Text="{DynamicResource Text.Repository.Search.ByFile}"/>
+              <TextBlock Text="{DynamicResource Text.Repository.Search.ByContent}"/>
             </ComboBox.Items>
           </ComboBox>
 
